--- a/contributing.Rmd
+++ b/contributing.Rmd
@@ -7,7 +7,7 @@ output: distill::distill_article
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-This guide offers advice for creating a new targetopia package. It assumes prior knowledge of [R package development](https://r-pkgs.org/), including [documentation](https://r-pkgs.org/man.html) and [testing](https://r-pkgs.org/tests.html). 
+This guide offers advice for creating a new targetopia package. It assumes prior knowledge of [`targets`]() [R package development](https://r-pkgs.org/), including [documentation](https://r-pkgs.org/man.html) and [testing](https://r-pkgs.org/tests.html). 
 
 ## Scope
 
