--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "Targetopia"
+description: |
+  A new R package ecosystem for democratized reproducible pipelines at scale.
 output: distill::distill_article
 ---
 
@@ -14,7 +16,8 @@ knitr::opts_chunk$set(echo = FALSE)
 [<img src="./images/targetopia/logo.png" height="200px">](https://raw.githubusercontent.com/wlandau/targetopia/main/images/targetopia.png)
 </th>
 <th style="font-weight:normal;">
-The targetopia is an ecosystem of R packages for democratized reproducible pipelines at scale. [Make](https://www.gnu.org/software/make/)-like pipelines accelerate development and reduce frustration for research papers, simulation studies, and other data science projects with copious workflows and demanding runtimes. The targetopia makes powerful pipelines accessible and friendly.<br><br>
+The targetopia makes it easy to create powerful [Make](https://www.gnu.org/software/make/)-like reproducible analysis pipelines in R, accelerating development and reducing frustration for research papers, simulation studies, and other projects with copious workloads and demanding runtimes. Targetopia packages are specialized workflow frameworks tailored to individual fields of Statistics and data science, and they use domain knowledge to abstract away most of the careful planning and engineering typically required to write pipelines. They leverage the full power of [`targets`](https://github.com/wlandau/targets) while requiring minimal expertise with [`targets`](https://github.com/wlandau/targets) itself.
+<br><br>
 </th>
 </tr>
 </table>
