--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Targetopia"
-description: |
-  A new R package ecosystem for democratized reproducible pipelines at scale.
+description: "A new R package ecosystem for democratized reproducible pipelines at scale"
 output: distill::distill_article
 ---
 
