--- a/packages.Rmd
+++ b/packages.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Packages"
 output: distill::distill_article
-description: "Confirmed members of the targetopia and future directions"
+description: "Confirmed members of the R Targetopia and future directions"
 ---
 
 ```{r setup, include=FALSE}
